# levquant

./: ARCHITECTURE.md  CHANGELOG.md  README.md  baseline_output.json  demo_full_stack.sh  pyproject.toml  requirements.txt  run_10m_stress_test.py  run_correlated_comparison.py  run_monte_carlo.py  run_sv_grid_sweep.py  web_ui.py
.github/workflows/: ci.yml
ai_assistant/: __init__.py  calibration_probe.py  context_journal.py  daily_calibration.py  prompt_loader.py
ai_assistant/prompts/: LEVQUANT_CALIBRATION_OUTPUT_PROMPT_v1.txt
cli/: run.py
decision_support/: __init__.py  gdpr_forensics.py  gdpr_liability.py  insurance_reserve.py  insurance_shadow.py  monetary.py  questionnaire.py  scenario_pricer.py  schemas.py  settlement_bands.py  unified_pricing.py
engine/: evaluation.py  interpretation.py  scoring.py  state.py  weights.py
outputs/: scenario_matrix.csv  scenario_matrix.json
outputs/grid/: grid_all.csv  grid_sv1c_0.45.csv  grid_sv1c_0.60.csv  grid_sv1c_0.75.csv  grid_sv1c_0.85.csv  grid_sv1c_0.95.csv
probabilistic/: README.md  __init__.py  adapters.py  bayesian.py  monte_carlo.py  scenarios.py  schemas.py
probabilistic/tests/: __init__.py  test_monte_carlo.py  test_scenarios.py
prompts/: levquant_input_builder_v1.1_short.md
scenarios/: kill_switches.py  presets.py  scenario_loop.py  sweeps.py
schemas/: validate_schema.py
tests/: test_bayesian_truth_decay.py  test_calibration_probe.py  test_cli.py  test_context_journal.py  test_daily_calibration.py  test_evaluation.py  test_gdpr_forensics.py  test_gdpr_liability.py  test_grid_sweep_smoke.py  test_import_panel.py  test_insurance_reserve.py  test_insurance_shadow.py  test_interpretation.py  test_scenario_loop.py  test_scoring.py  test_settlement_bands.py  test_unified_pricing.py
web/: __init__.py  dashboard.py
web/components/: __init__.py  assumptions_panel.py  contagion_map.py  (+7 more)
